[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/Early GameBoy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/tiltle.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://asset/Early GameBoy.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://asset/Early GameBoy.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 69.0, 81.0, 124.0, 136.0, 179.0, 531.0, 300.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 510.0, 66.0, 182.0, 246.0, 954.0 ]
}

[node name="New" type="Button" parent="." groups=[
"button",
]]
margin_left = 60.0
margin_top = 60.0
margin_right = 192.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "GAME start"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="." groups=[
"button",
]]
visible = false
margin_left = 60.0
margin_top = 117.0
margin_right = 226.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 4 )
text = "settings"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="." groups=[
"button",
]]
margin_left = 60.0
margin_top = 117.0
margin_right = 136.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 5 )
toggle_mode = true
text = "exit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Legal" type="Button" parent="." groups=[
"button",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -316.0
margin_top = -87.9999
margin_right = -56.0
margin_bottom = -61.9999
custom_fonts/font = SubResource( 6 )
text = "legal infomation"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.059
anchor_top = 0.195
anchor_right = 0.196
anchor_bottom = 0.238
margin_left = 149.82
margin_top = 2.99999
margin_right = 26.08
margin_bottom = -2.8
rect_pivot_offset = Vector2( 4, 10 )
custom_fonts/font = SubResource( 7 )
text = "~"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.24
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 0.179993
margin_top = 28.0
margin_bottom = -62.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 92.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "mute"
flat = true

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 58.0
margin_bottom = 24.0

[node name="congratulations" type="Label" parent="."]
margin_left = 270.0
margin_top = 280.0
margin_right = 750.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 9 )
text = "congratulations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Legal" to="." method="_on_Legal_pressed"]
